must-gather.local.5629786973073760676/quay-io-openshift-release-dev-ocp-v4-0-art-dev-sha256-b74b27084f7dce35282f849aca3b99d79a6cead0a3a4046bf66c4953c296daba/namespaces/openshift-authentication/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2025-03-31T20:28:46Z"
    labels:
      app: oauth-openshift
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:host: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: authentication-operator
      operation: Update
      time: "2025-03-31T20:28:46Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2025-03-31T20:28:46Z"
    name: oauth-openshift
    namespace: openshift-authentication
    resourceVersion: "62564"
    uid: 004a0e20-d059-44a9-9361-10d845616e08
  spec:
    host: oauth-openshift.apps.ovhcpococp.trikorasolutions.net
    port:
      targetPort: 6443
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: oauth-openshift
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2025-03-31T20:28:46Z"
        status: "True"
        type: Admitted
      host: oauth-openshift.apps.ovhcpococp.trikorasolutions.net
      routerCanonicalHostname: router-default.apps.ovhcpococp.trikorasolutions.net
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "718087"
